Add delete method to User
